# onchain-network-insights

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yaml  docker.yml  smoke.yml
analytics/: cli.py  cli_holders.py  cli_whales.py  holders.py  token_holders.py  whales.py
common/: config.py  logging_setup.py  settings.py  utils.py
common/kafka_sim/: __init__.py  memory.py  sqlite_backend.py
dashboard/: streamlit_app.py
docs/: PRDD_v0_1.md
etl/: cli.py  erc20.py  extract.py  load.py  pipeline.py  transform.py
ingestion/: checkpoint.py  erc20_rpc.py  fetcher.py  parser.py
scripts/: bootstrap.sh  ingest_cli.py  secrets_guard.py
storage/: manager.py  postgres_backend.py  schema.py  sqlite_backend.py
streaming/: consumers.py  historical_feeder.py  producer.py  sqlite_sink.py
tests/: conftest.py  test_analytics_token_holders_extras.py  test_analytics_token_holders_sqlite.py  test_analytics_whales.py  test_checkpoint.py  test_config_load.py  test_dashboard_imports.py  test_erc20_decode.py  test_etl_integration_sqlite.py  test_etl_pipeline.py  test_etl_pipeline_erc20.py  test_etl_pipeline_transfers.py  test_etl_transform.py  test_fetcher.py  test_fetcher_checkpoint.py  test_meta_sanity.py  test_metrics.py  test_parser.py  test_storage_postgres.py  test_storage_sqlite.py  test_storage_transfers_postgres.py  test_storage_transfers_sqlite.py  test_transaction_fetcher.py
tests/streaming/: test_broker_memory.py  (+6 more)
