[project]
name = "onchain-network-insights"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "PyYAML",
    "requests",
    "psycopg2-binary",
    "streamlit>=1.37",
    "plotly>=5.24",
    "pandas>=2.2",
    "pytest",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["analytics", "etl", "storage", "common", "dashboard"]
